--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IOWAGANG</title>
     </head>
     <body>
         <h1>{{ pageTitle }}</h1>
 
-        {{ content }}
+        {{ content | safe }}
     </body>
 </html>
